--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -667,7 +667,7 @@ input::-ms-input-placeholder {
 }
 /*home section*/
 .home{
-    background: url(../images/homebg.jpg) no-repeat center center;
+    background: url(../images/homebg.webp) no-repeat center center;
     background-size: cover;
 }
 .home_skew_border{
@@ -1403,7 +1403,7 @@ li .single_team_text p{
                         Trail Section 
 ======================================================================*/
 .main_trial_area{
-    background: url(../images/trailbg.jpg) no-repeat top center;
+    background: url(../images/trailbg.webp) no-repeat top center;
     overflow: hidden;
     background-size: cover;
     color:#fff;
